feat: Implementa o endpoint responsável por adicionar novos produtos em uma venda ativa
