# routes/api.php
@@ -5,9 +5,11 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\ProductController;
 use App\Http\Controllers\SaleController;
 
+
 Route::get('/products', [ProductController::class, 'list']);
 
 Route::get('/sales', [SaleController::class, 'list']);
 Route::get('/sale/{id}', [SaleController::class, 'get']);
 Route::post('/sale', [SaleController::class, 'store']);
+Route::post('/sale/{id}/products', [SaleController::class, 'storeProducts']);
 Route::delete('/sale/{id}', [SaleController::class, 'cancel']);
